--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,1 +1,459 @@
-{}
+{
+  "parentPortal": { "title": "Parent Portal", "description": "View student information, messages and announcements from the school." },
+  "pp": {
+    "report": {
+      "generateAi": "Generate with AI",
+      "fetching": "Fetching data...",
+      "compiling": "Compiling grades...",
+      "writing": "Writing comments...",
+      "done": "Done!",
+      "missingPeriodTitle": "Missing information",
+      "missingPeriodDesc": "Please enter a reporting period.",
+      "errorTitle": "Error generating report",
+      "errorDesc": "An unexpected error occurred. Please try again."
+    },
+    "days": {
+      "mon": "Monday",
+      "tue": "Tuesday",
+      "wed": "Wednesday",
+      "thu": "Thursday",
+      "fri": "Friday"
+    },
+    "loading": { "checkingLink": "Checking access link..." },
+    "unauthorized": {
+      "title": "Unauthorized",
+      "description": "The access link is invalid, expired, or revoked. Please request a new link from the school administration."
+    },
+    "parentPortal": { "title": "Parent Portal" },
+    "gradeAndClass": "Grade {grade} — Class {className}"
+  },
+  "loading": { "checkingLink": "Checking access link..." },
+  "unauthorized": {
+    "title": "Unauthorized",
+    "description": "The access link is invalid, expired, or revoked. Please request a new link from the school administration."
+  },
+  "nav": {
+    "assignments": "Assignments",
+    "calendar": "Calendar",
+    "announcements": "Announcements",
+    "messages": "Messages"
+  },
+  "assignments": {
+    "cardTitle": "Assignments",
+    "pageTitle": "Assignments",
+    "empty": "No assignments at the moment.",
+    "courseLabel": "Course: {courseName}",
+    "pointsLabel": "Points: {points}",
+    "dueLabel": "Due: {date}",
+    "fetchError": "Failed to load assignments.",
+    "noDue": "No due date"
+  },
+  "calendar": {
+    "cardTitle": "Calendar & Timetable",
+    "pageTitle": "School calendar",
+    "eventsForDay": "Events {date}",
+    "noEventsToday": "No events for this day",
+    "weeklyTimetableTitle": "Weekly timetable",
+    "fetchError": "Failed to load calendar.",
+    "timetableUnavailable": "Timetable not available here — view the main timetable page."
+  },
+  "common": {
+    "error": "Error",
+    "loading": "Loading...",
+    "clearFilters": "Clear filters",
+    "back": "Back",
+    "noData": "No data",
+    "loadingLabel": "Loading...",
+    "department": "Department",
+    "amount": "Amount",
+    "month": "Month",
+    "paymentMethod": "Payment method",
+    "fullName": "Full name",
+    "grade": "Grade"
+    ,"areYouSure": "Are you absolutely sure?",
+    "continue": "Continue",
+    "cannotUndo": "This action cannot be undone.",
+    "deleting": "Deleting..."
+  },
+  "months": {
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December"
+  },
+  "student": {
+    "idLabel": "Student ID",
+    "emailLabel": "Email",
+    "guardianLabel": "Guardian",
+    "contactLabel": "Contact"
+  },
+  "attendance": {
+    "title": "Recent attendance",
+    "record": "Attendance record",
+    "present": "Present",
+    "late": "Late",
+    "absent": "Absent",
+    "pageTitle": "Student attendance",
+    "exportCsv": "Export CSV",
+    "recordTitle": "Attendance record",
+    "noRecords": "No attendance records for this student.",
+    "columns": { "date": "Date", "status": "Status" },
+    "status": { "present": "Present", "late": "Late", "absent": "Absent" }
+  },
+  "announcements": {
+    "loading": "Loading announcements...",
+    "noUrgent": "No urgent announcements for your child.",
+    "title": "Bulletin & Announcements",
+    "latestTitle": "Latest announcements",
+    "noForParents": "No announcements targeted to parents at this time."
+  },
+  "academic": { "progressTitle": "Academic progress" },
+  "report": {
+    "generateAi": "Generate with AI",
+    "fetching": "Fetching data...",
+    "compiling": "Compiling grades...",
+    "writing": "Writing comments...",
+    "done": "Done!",
+    "dialog": {
+      "viewButton": "View report card",
+      "title": "Generate official report card",
+      "description": "Enter the reporting period to generate a report card with AI-assisted comments.",
+      "reportingPeriodLabel": "Reporting period",
+      "placeholder": "e.g. Term 1 2024",
+      "closeButton": "Close"
+    },
+    "overviewTitle": "Overview",
+    "teacher": "Teacher: {teacherName}"
+  },
+  "courses": { "noGrades": "No grades available yet.",
+    "infoTitle": "Course information",
+    "notFound": "Course not found.",
+    "descriptionTitle": "Course description",
+    "noDescription": "No description available.",
+    "resourcesTitle": "Resources",
+    "resourcesDesc": "Links, lectures and files provided by the teacher",
+    "noResources": "No resources published for this course yet.",
+    "quickDetails": "Quick details",
+    "contactTeacher": "Contact teacher",
+    "noTeacherAssigned": "No teacher assigned to this course yet.",
+    "viewTeacherProfile": "View teacher profile",
+    "gradeLabel": "Grade",
+    "credits": "Credits",
+    "departmentLabel": "Department",
+    "fetchError": "Failed to fetch course data.",
+    "viewResources": "View resources",
+    "notAvailable": "Not available"
+  },
+  "support": {
+    "title": "Support programs",
+    "browseAvailable": "Browse available support programs",
+    "noAvailable": "No support programs available",
+    "availableTitle": "Available programs",
+    "requesting": "Sending...",
+    "request": "Request signup",
+    "fetchError": "Failed to load support programs.",
+    "requestSentTitle": "Request sent",
+    "requestSentDesc": "Signup request has been sent to the school.",
+    "requestError": "Failed to submit request.",
+    "instructor": "Instructor: {name}"
+  },
+  "files": {
+    "title": "Student folder — Files",
+    "uploadLabel": "Upload new file",
+    "upload": "Upload",
+    "listTitle": "Files",
+    "noFiles": "No files yet.",
+    "openDownload": "Open / Download",
+    "fetchError": "Failed to load files.",
+    "chooseFileTitle": "Choose a file",
+    "chooseFileDesc": "Please select a file to upload.",
+    "uploadedTitle": "Uploaded",
+    "uploadedDesc": "{name} uploaded successfully.",
+    "uploadError": "Failed to upload file.",
+    "deletedTitle": "Deleted",
+    "deletedDesc": "File deleted.",
+    "deleteError": "Failed to delete file."
+  },
+  "library": {
+    "title": "Student Library",
+    "loanDateLabel": "Loan date",
+    "dueLabel": "Due",
+    "loansTitle": "Student loans",
+    "catalogTitle": "Book catalog",
+    "noLoans": "No current loans.",
+    "available": "Available",
+    "loaned": "Loaned",
+    "requesting": "Requesting...",
+    "request": "Request loan",
+    "fetchError": "Failed to load library data.",
+    "pageLoadError": "Failed to load library page.",
+    "notAvailableTitle": "Not available",
+    "notAvailableDesc": "This book is not available right now.",
+    "requestedTitle": "Requested",
+    "requestedDesc": "{title} loaned - due {due}"
+  },
+  "forums": {
+    "title": "Class forums",
+    "newThread": {
+      "titlePlaceholder": "Thread title",
+      "contentPlaceholder": "Thread content"
+    },
+    "postButton": "Post thread",
+    "fillFields": "Please fill all fields",
+    "created": "Thread created",
+    "createdDesc": "A new thread has been created."
+  },
+  "goals": {
+    "title": "Student goals & progress",
+    "titleRequired": "Please enter a goal title",
+    "added": "Goal added",
+    "prompt": { "note": "Note (optional)" },
+    "titlePlaceholder": "Goal title",
+    "notesPlaceholder": "Notes (optional)",
+    "addButton": "Add goal",
+    "savingLabel": "Saving...",
+    "noGoals": "No goals yet.",
+    "targetLabel": "Target",
+    "statusLabel": "Status",
+    "addProgress": "Add progress",
+    "markCompleted": "Mark as completed",
+    "progressHeader": "Progress",
+    "noProgress": "No progress recorded.",
+    "percentLabel": "Percent",
+    "progressRecorded": "Progress recorded",
+    "completed": "Marked as completed",
+    "invalidValue": "Invalid value"
+  },
+  "clubs": {
+    "title": "Clubs & Activities",
+    "joinRequested": "Join request sent",
+    "joinRequestedDesc": "The supervisors will review the join request.",
+    "fetchError": "Failed to load activities.",
+    "joinButton": "Request join",
+    "requestingLabel": "Sending...",
+    "noAvailable": "No activities available at the moment.",
+    "scheduleLabel": "Schedule: {schedule}"
+  },
+  "grades": {
+    "title": "Grades & Reports",
+    "downloadPdf": "Download as PDF",
+    "chartTitle": "Student performance by course",
+    "fetchError": "Failed to load grades data."
+  },
+  "payments": {
+    "title": "Payments & Fees",
+    "summaryTitle": "Fees summary",
+    "historyTitle": "Payment history",
+    "makePayment": "Make a payment",
+    "demoPay": "Pay now (demo)",
+    "cardDetails": "Card details",
+    "cardPayButton": "Pay with card",
+    "processing": "Processing...",
+    "noPayments": "No payments recorded.",
+    "method": { "card": "Card", "cash": "Cash" },
+    "fetchError": "Failed to load payments data.",
+    "noStudent": "Student record not found.",
+    "invalidAmountTitle": "Invalid amount",
+    "invalidAmountDesc": "Enter a valid amount.",
+    "startedTitle": "Payment started",
+    "startedDesc": "Payment intent created. Payment will be recorded after confirmation.",
+    "recordedTitle": "Payment recorded",
+    "recordedDesc": "Recorded payment {amount} {method}",
+    "failedTitle": "Payment failed",
+    "failedDesc": "An error occurred while processing the payment.",
+    "stripeUnavailable": "Stripe is not available right now. Try later.",
+    "succeededTitle": "Paid",
+    "succeededDesc": "Payment confirmed successfully.",
+    "feeStructure": "Annual fee structure",
+    "totalPaid": "Total paid",
+    "balance": "Balance"
+  },
+  "supportPrograms": { "browseAvailable": "Browse available support programs", "noAvailable": "No support programs available" },
+
+  "announcements": {
+    "fetchError": "Failed to load announcements."
+  },
+
+  "forums": {
+    "by": "By: {author}",
+    "authorFallback": "Parent",
+    "replyEmpty": "Please write a reply",
+    "replyAddedTitle": "Reply added",
+    "replyAddedDesc": "Your reply has been added.",
+    "reported": "Reported",
+    "threadNotFound": "Thread not found",
+    "repliesTitle": "Replies",
+    "noReplies": "No replies yet.",
+    "replyPlaceholder": "Add your reply here...",
+    "postReplyButton": "Post reply",
+    "reportButton": "Report"
+  },
+  "finance": {
+    "title": "Finance",
+    "fees": "Fees",
+    "expenses": "Expenses",
+    "reports": "Reports",
+    "feeManagement": {
+      "title": "Fee management",
+      "description": "Manage student fees, invoices, and installment schedules.",
+      "selectStudent": "Select student",
+      "selectStudentPlaceholder": "Search for student...",
+      "startPeriod": "Start period",
+      "endPeriod": "End period",
+      "month": "Month",
+      "year": "Year",
+      "selectMonth": "Select month...",
+      "amount": "Amount",
+      "paymentMethod": "Payment method",
+      "creditCard": "Credit card",
+      "cash": "Cash",
+      "bankTransfer": "Bank transfer",
+      "printStatement": "Print statement",
+      "feeStatement": "Fee statement",
+      "feeSummary": "Fee summary",
+      "financialStatusForPeriod": "Financial status for selected period.",
+      "dueThisPeriod": "Due (this period)",
+      "paidThisPeriod": "Paid (this period)",
+      "balanceThisPeriod": "Balance (this period)",
+      "carryForwardBalance": "Carry forward balance",
+      "netBalance": "Net balance",
+      "addPayment": "Add payment",
+      "paymentMonth": "Payment month",
+      "monthlyBreakdown": "Monthly breakdown",
+      "detailedInstallmentsView": "Detailed installments and payments view for the selected period.",
+      "amountDue": "Amount due",
+      "amountPaid": "Amount paid",
+      "balance": "Balance",
+      "paymentHistoryInPeriod": "Payment history in period",
+      "monthApplied": "Month applied",
+      "noPaymentsForPeriod": "No payments recorded for this period.",
+      "editPayment": "Edit payment",
+      "updatePaymentDetailsFor": "Update payment details for {name}.",
+      "originalDate": "Original date",
+      "paymentForMonth": "Payment for month",
+      "errorFetchingFeeInfo": "Error fetching fee info",
+      "paymentRecorded": "Payment recorded successfully",
+      "errorRecordingPayment": "Error recording payment",
+      "paymentUpdated": "Payment updated",
+  "errorUpdatingPayment": "Error updating payment",
+  "gradeMonthlyLabel": "Grade monthly",
+  "supportMonthlyLabel": "Support courses monthly",
+  "totalMonthlyLabel": "Total monthly due",
+  "print": "Print",
+      "feeStatementTitle": "Fee statement",
+      "recordPayment": "Record payment",
+      "noFeeStructureFound": "No fee structure found",
+      "setupFeeStructureForGrade": "Please setup a fee structure for grade {grade} for the academic year {year}.",
+      "gotoFeeStructures": "Go to fee structures",
+      "selectPeriodToViewStatement": "Please choose start and end period to view the fee statement.",
+      "paymentRecordedDesc": "Payment has been added for the student.",
+      "invalidInput": "Invalid input",
+      "selectStudentRange": "Please select a student, time range and month and enter a valid amount",
+      "paymentDeleted": "Payment deleted",
+      "paymentDeletedDesc": "Payment record removed successfully",
+      "payment": {
+        "deleteConfirmation": "This will permanently delete the payment record of {amount}."
+      },
+      "financeReportsPage": {
+        "title": "Financial reports",
+        "description": "Overview of the school's financial performance, including fees income and expenses.",
+        "totalIncome": "Total income",
+        "totalExpenses": "Total expenses",
+        "netProfitLoss": "Net profit / loss",
+        "profitMargin": "Profit margin",
+        "incomeOverviewMonthly": "Income overview (monthly)",
+        "expenseBreakdown": "Expense breakdown",
+        "expenseTrackerPage": {
+          "title": "Expense tracker",
+          "description": "Log and track all school expenses.",
+          "addExpense": "Add expense",
+          "recordNewExpense": "Record new expense",
+          "enterExpenseDetails": "Enter expense details below.",
+          "descriptionLabel": "Description",
+          "amountLabel": "Amount",
+          "categoryLabel": "Category",
+          "selectCategory": "Select category",
+          "salaries": "Salaries",
+          "utilities": "Utilities",
+          "supplies": "Supplies",
+          "maintenance": "Maintenance",
+          "other": "Other",
+          "adding": "Adding...",
+          "add": "Add expense",
+          "print": "Print",
+          "expenseReport": "Expense report",
+          "forPeriod": "For period:",
+          "date": "Date",
+          "descriptionCol": "Description",
+          "categoryCol": "Category",
+          "amountCol": "Amount",
+          "noExpenses": "No expenses recorded for this period.",
+          "monthlyTotals": "Monthly totals",
+          "pickDateRange": "Pick date range"
+        },
+        "printStatement": "Print statement",
+        "selectStudent": "Select student",
+        "selectStudentPlaceholder": "Select a student...",
+        "startPeriod": "Start period",
+        "endPeriod": "End period",
+        "month": "Month",
+        "year": "Year",
+        "selectMonth": "Select month...",
+        "selectPeriodToViewStatement": "Please choose start and end period to view the fee statement.",
+        "noFeeStructureFound": "No fee structure found",
+        "setupFeeStructureForGrade": "Please setup a fee structure for grade {grade} for the academic year {year}.",
+        "gotoFeeStructures": "Go to fee structures",
+        "feeStatement": "Fee statement",
+        "feeSummary": "Fee summary",
+        "financialStatusForPeriod": "Financial status for selected period.",
+        "dueThisPeriod": "Due (this period)",
+        "paidThisPeriod": "Paid (this period)",
+        "balanceThisPeriod": "Balance (this period)",
+        "carryForwardBalance": "Carry forward balance",
+        "netBalance": "Net balance",
+        "addPayment": "Add payment",
+        "paymentMonth": "Payment month",
+        "monthlyBreakdown": "Monthly breakdown",
+        "detailedInstallmentsView": "Detailed installments and payments view for the selected period.",
+        "amountDue": "Amount due",
+        "amountPaid": "Amount paid",
+        "balance": "Balance",
+        "paymentHistoryInPeriod": "Payment history in period",
+        "monthApplied": "Month applied",
+        "noPaymentsForPeriod": "No payments recorded for this period.",
+        "editPayment": "Edit payment",
+        "updatePaymentDetailsFor": "Update payment details for {name}.",
+        "originalDate": "Original date",
+        "paymentForMonth": "Payment for month",
+        "errorFetchingFeeInfo": "Error fetching fee info",
+        "paymentRecorded": "Payment recorded successfully",
+        "errorRecordingPayment": "Error recording payment",
+        "paymentUpdated": "Payment updated",
+        "errorUpdatingPayment": "Error updating payment"
+      }
+    },
+    "errors": {
+      "fetchData": "Failed to load initial data",
+      "invalidInput": "Invalid input",
+      "selectStudentRange": "Please select a student, time range and month and enter a valid amount",
+      "studentNotFound": "Student not found",
+      "deletePayment": "Failed to delete payment"
+    },
+    "success": {
+      "paymentDeleted": "Payment deleted",
+      "paymentDeletedDesc": "Payment record removed successfully"
+    },
+    "payment": {
+      "enterDetails": "Enter payment details for {name}",
+      "deleteConfirmation": "This will permanently delete the payment record of {amount}."
+    }
+  }
+}
